--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "coloraffect",
   "version": "1.0.0",
   "description": "Inquest of color's affect on return rates.",
+  "directories": {
+    "test": "test"
+  },
   "dependencies": {
-    "mongoose": "~3.8.8"
+    "chai": "~1.9.0",
+    "mongoose": "~3.8.8",
+    "mocha": "*"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
